* Changed XStream usermanager to use DomDriver() instead of the default XPP3
  which is an optional download.
* Location which JSX and XStream changed from users/
  to users/jsx/ and users/xstream/ respectively.
* Added org.drftpd.usermanager.ResetMonthlyStats for resetting monthly stats
  and dispatching events to any plugins (such as Trial)

2004/05/31 Morgan Christiansson <drftpd@mog.se>
* Users hostmask wasn't checked when user wasn't running an
  ident server and wasn't connecting through an ftp-bnc.
  This behaviour was introcued when IDNT support was added.

2004/05/22 Matthew Zimmerman <zubov@users.sourceforge.net>
* Implemented MoveReleaseOffSlavesToMostFreeSlaves
* Fixed MoveReleaseToMostFreeSlaves returning the most full slaves, 
  Thanks Tranon

2004/05/21 Matthew Zimmerman <zubov@users.sourceforge.net>
* Fixed Bad Sequence of Commands bug in 1.1
* Fixed "SITE NEW"

2004/05/17 Morgan Christiansson <drftpd@mog.se>
* Added IDNT support with accompanying LoginTest JUnit tetscase.
* Removed use.ident support, ident protocol is used if it is significant in users hostmasks.

2004/05/16 Matthew Zimmerman <zubov@users.sourceforge.net>
* Refactored ArchiveType(s) to accept multiple destination slaves
* There are four ArchiveType(s) now available, MoveReleaseToMostFreeSlaves
  MoveReleaseToSpecificSlaves, FinishReleaseOnSlaves, and StripeFilesOffSpecificSlave
* Settings in archive.conf have changed

2004/05/11 Morgan Christiansson <drftpd@mog.se>
* Began adding MAX_PATH checking so that PATH_MAX which is 256 on win32 isn't exceeded.
* Made SITE SLAVES plain available to non-siteops, SITE SLAVES now takes 2 arguments:
  SITE SLAVES [rmi] [plain]
* Found and fixed a slave synchronization error when an upload failed.
* Fixed error checking on mkdirs().

2004/04/26 Morgan Christiansson <drftpd@mog.se>
* Added userrejectsecure, userrejectinsecure, denydiruncrypted
  and denydatauncrypted that behave the same was as in glftpd to perms.conf.
  Initial patch by mutiger.